# bsnlib

./: .TODO  .gitignore  CMakeLists.txt  README.md  bsnlib.h  main.cpp
bsnlib/geometry/: se3.h  so2.h  so3.h
bsnlib/internal/: add.h  basern.h  complex.h  decompose.h  determinant.h  dot.h  dslice.h  lower.h  multiply.h  operator.h  raw.h  sarrayobject.h  slice.h  smatrix.h  smatrixobject.h  smultiply.h  subs.h  traits.h  transpose.h
bsnlib/solve/: backsubstitution.h  directsubstitution.h  eigen.h  forwardsubstitution.h  givens.h  householder.h  jacobi.h  ldlt.h  plu.h  qr.h  solve.h  svd.h
tests/: operations.cpp
